# 2023MORAIContest

./: .gitignore  .gitmodules  README.md  frames.gv  map.pgm
src/lane_detection/: CMakeLists.txt  package.xml
src/lane_detection/scripts/: 00.class_form.py  01.pub.py  02.sub.py  05.sim_cam_sub.py  06.sim_lidar_sub.py  07.sim.LKAS.py  07.sim.LKAS_backup.py  CamShower.py  KeyPoller.py  lane_img.py  lane_main.py  lanedetect_example.py  pidcal.py  sim_kbd.py
src/main/: CMakeLists.txt  package.xml
src/main/launch/: main.launch
src/main/scripts/: cmd_vel_to_ackermann.py  lane_main.py  lane_main_joonhome  lane_main_joonhome.py  main.py  main_run.py  obstacle_detector.py  obstacle_detectors.py  pidcal.py  slidewindow.py  slidingwindow.py
src/obstacle_detector/: .gitignore
src/obstacle_detector/launch/: demo.launch  nodelets.launch  nodes.launch
src/obstacle_detector/resources/: lidar2.bag  obstacle_detector.rviz
src/obstacle_detector/src/: obstacle_extractor.cpp  obstacle_publisher.cpp  scans_merger.cpp
src/robot_localization/params/: dual_ekf_navsat_example.yaml
src/wego/: CMakeLists.txt  package.xml
src/wego/launch/: gmapping.launch  navigation.launch  teleop.launch
src/wego/maps/: map.pgm
src/wego/rviz/: display.rviz  navigation.rviz  slam.rviz
src/wego/scripts/: navigation_client.py  pub_odom.py
src/wego/src/: convert_lidar.cpp
src/wego_2d_nav/: CMakeLists.txt  package.xml
src/wego_2d_nav/launch/: amcl.launch  amcl_diff.launch  move_base.launch
src/wego_2d_nav/params/: costmap_common_params.yaml  global_costmap_params.yaml  (+2 more)
(+5 files in other folders)
